fix send-receive constraints for traces with message handlers